# notes-cli

./: .gitignore  LICENSE  README.md  notes.db  pyproject.toml  setup.py
app/: main.py  schemas.py
notes_cli/: cli.py
notes_cli/app/: main.py  notes.db  requirements.txt
