[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "notes-cli"
version = "0.1.0"
description = "CLI to interact with the Notes FastAPI backend"
authors = [{ name = "Ankita" }]
dependencies = ["typer[all]", "httpx", "rich"]
requires-python = ">=3.8"

[project.scripts]
notes-cli = "cli.cli:app"

[tool.setuptools.packages.find]
include = ["cli"]
